--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,1 @@
-body{font:14px "PingFang SC","Microsoft Yahei",Arial,sans-serif;padding-top:50px}a{color:#ffc400}h1{color:green}
+body{font:14px "PingFang SC","Microsoft Yahei",Arial,sans-serif;padding-top:50px}h1{color:green}.table td,.table td th{vertical-align:middle}.btn>a{color:#ffffff;text-decoration:none}
