--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -3,10 +3,15 @@ body {
   padding-top: 50px;
 }
 
-a {
-  color: rgb(255, 196, 0);
-}
-
 h1 {
   color: green;
+}
+
+.table td, .table td th {
+  vertical-align: middle;
+}
+
+.btn > a {
+  color: #ffffff;
+  text-decoration: none;
 }
