--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -6,9 +6,9 @@ block content
       each item in movies
         .col-md-2
           .thumbnail
-            a(href="/movie/#{item.id}")
-              img(src="#{item.poster}",alt="#{item.title}")
+            a(href='/movie/' + item.id)
+              img(src=item.poster alt=item.title)
             .caption
               h3 #{item.title}
               p
-                a.btn.btn-primary(href="/movie/#{item.id}",role="button") 观看预告片
+                a.btn.btn-primary(href='/movie/' + item.id role="button" target="_blank") 观看预告片
