:sparkles: 增加删除接口

--- a/views/pages/list.pug
+++ b/views/pages/list.pug
@@ -30,3 +30,4 @@ block content
                 button.btn.btn-raised.btn-info: a(target="_self" href='/admin/update/'+item.id) 修改
               td
                 button.btn.btn-raised.btn-danger.del(type="button" data-id=item.id) 删除
+  script(src="./scripts/admin.js")
