--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -1,4 +1,4 @@
 link(rel="stylesheet" href="https://cdn.bootcss.com/bootstrap-material-design/4.0.2/bootstrap-material-design.min.css")
 link(rel="stylesheet" href="/styles/style.css")
-script(src="https://cdn.bootcss.com/jquery/3.3.1/jquery.slim.min.js")
+script(src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js")
 script(src="https://cdn.bootcss.com/bootstrap-material-design/4.0.2/bootstrap-material-design.umd.min.js")
