--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,1 +1,1 @@
-body{font:14px "PingFang SC","Microsoft Yahei",Arial,sans-serif;padding-top:50px}h1{color:green}.table td,.table td th{vertical-align:middle}.btn>a{color:#ffffff;text-decoration:none}
+body{font:14px "PingFang SC","Microsoft Yahei",Arial,sans-serif;padding-top:50px}h1{color:green}caption,th,td{text-align:center}.table td,.table td th{vertical-align:middle}.btn>a{color:#ffffff;text-decoration:none}.item-img.img-thumbnail img{width:100%;max-height:280px}
