--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -2,16 +2,20 @@ body {
   font: 14px "PingFang SC", "Microsoft Yahei", Arial, sans-serif;
   padding-top: 50px;
 }
-
 h1 {
   color: green;
 }
-
+caption, th, td {
+  text-align: center;
+}
 .table td, .table td th {
   vertical-align: middle;
 }
-
 .btn > a {
   color: #ffffff;
   text-decoration: none;
+}
+.item-img.img-thumbnail img {
+  width: 100%;
+  max-height: 280px;
 }
