--- a/views/pages/detail.pug
+++ b/views/pages/detail.pug
@@ -3,9 +3,9 @@ extend ../layout
 block content
   .container
     .row
-      .col-md-7
-        embed(src=movie.flash,allowFullScreen="true",quality="high",width="720",height="600",align="middle",type="application/x-shockwave-flash")
-      .col-md-5
+      .col-md-10.embed-responsive-item
+        embed(src=movie.flash,allowFullScreen="true",quality="high",width="100%",align="middle",type="application/x-shockwave-flash")
+      .col-md-2
         dl.dl-horizontal
         dl 电影名字
         dd= movie.title
